--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -62,22 +62,11 @@ jobs:
           retention-days: 1
 
   build-arm64:
-    runs-on: macos-latest
+    runs-on: warp-ubuntu-latest-arm64-2x
     steps:
       - name: Prepare
         run: |
           echo "PLATFORM_PAIR=linux-arm64" >> $GITHUB_ENV
-
-      - name: Install Docker and co
-        run: |
-          brew install --cask docker
-          open --background -a Docker
-          brew install docker
-          brew install docker-buildx
-          brew install qemu
-          brew install lima
-          brew install colima
-          brew services start colima
       
       - name: Docker meta
         id: meta
@@ -85,11 +74,11 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
       
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
       - name: Login to Docker Hub
         uses: docker/login-action@v3
