--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -57,7 +57,7 @@ files:
         #' Spectral spectral matching annotations. STRING
         spectral: data/interim/annotations/example_spectralMatches.tsv.gz
 
-      #' Directory containing the sirius annotations. STRING
+      #' The directory containing the sirius annotations. STRING
       sirius: data/interim/annotations/example_sirius
 
     #' List of filtered annotations. STRING
@@ -715,5 +715,5 @@ options:
   #' Remove ties. BOOLEAN
   remove_ties: no
 
-  #' Summarise results to one row per feature. BOOLEAN
+  #' Summarize all candidates per feature to a single row. BOOLEAN
   summarise: no
