Adding convenience function to change params (fixes #177)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -98,6 +98,10 @@ Collate:
     'annotate_spectra.R'
     'benchmark_taxize_spectra.R'
     'calculate_entropy.R'
+    'load_yaml_files.R'
+    'go_to_cache.R'
+    'create_dir.R'
+    'change_params_small.R'
     'clean_bio.R'
     'filter_high_confidence_only.R'
     'columns_model.R'
@@ -105,7 +109,6 @@ Collate:
     'clean_chemo.R'
     'complement_metadata_structures.R'
     'create_components.R'
-    'create_dir.R'
     'create_edges.R'
     'create_edges_spectra.R'
     'decorate_bio.R'
@@ -121,7 +124,6 @@ Collate:
     'fake_lotus.R'
     'fake_sop_columns.R'
     'filter_annotations.R'
-    'go_to_cache.R'
     'get_file.R'
     'get_example_sirius.R'
     'get_example_files.R'
@@ -133,7 +135,6 @@ Collate:
     'harmonize_names_sirius.R'
     'harmonize_spectra.R'
     'install.R'
-    'load_yaml_files.R'
     'log_debug.R'
     'log_pipe.R'
     'pre_harmonize_names_sirius.R'
