--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(annotate_spectra)
 export(benchmark_taxize_spectra)
 export(calculate_entropy)
 export(calculate_mass_of_m)
+export(change_params_small)
 export(clean_bio)
 export(clean_chemo)
 export(clean_collapse)
@@ -113,6 +114,7 @@ importFrom(crayon,yellow)
 importFrom(docopt,docopt)
 importFrom(dplyr,join_by)
 importFrom(fs,dir_create)
+importFrom(fs,file_copy)
 importFrom(fs,path_home)
 importFrom(glue,glue)
 importFrom(httr2,req_error)
