--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,58 +2,24 @@
 
 export(annotate_masses)
 export(annotate_spectra)
-export(benchmark_taxize_spectra)
-export(calculate_entropy)
 export(calculate_mass_of_m)
 export(change_params_small)
-export(clean_bio)
-export(clean_chemo)
-export(clean_collapse)
-export(columns_model)
-export(complement_metadata_structures)
 export(create_components)
 export(create_dir)
-export(create_edges)
 export(create_edges_spectra)
-export(decorate_bio)
-export(decorate_chemo)
-export(decorate_masses)
-export(dist_get)
-export(dist_groups)
 export(export_output)
-export(export_params)
-export(export_spectra)
-export(export_spectra_2)
-export(extract_spectra)
-export(fake_annotations_columns)
-export(fake_ecmdb)
-export(fake_hmdb)
-export(fake_lotus)
-export(fake_sop_columns)
 export(filter_annotations)
-export(filter_high_confidence_only)
+export(get_default_paths)
 export(get_example_files)
-export(get_example_sirius)
 export(get_file)
-export(get_gnps_tables)
 export(get_last_version_from_zenodo)
-export(get_massbank_spectra)
 export(get_organism_taxonomy_ott)
 export(get_params)
 export(go_to_cache)
-export(harmonize_adducts)
-export(harmonize_names_sirius)
-export(harmonize_spectra)
 export(import_spectra)
 export(install)
-export(load_yaml_files)
 export(log_debug)
-export(log_pipe)
 export(parse_adduct)
-export(parse_cli_params)
-export(parse_yaml_params)
-export(parse_yaml_paths)
-export(pre_harmonize_names_sirius)
 export(prepare_annotations_gnps)
 export(prepare_annotations_sirius)
 export(prepare_annotations_spectra)
@@ -67,141 +33,8 @@ export(prepare_libraries_sop_hmdb)
 export(prepare_libraries_sop_lotus)
 export(prepare_libraries_sop_merged)
 export(prepare_libraries_spectra)
-export(prepare_params)
 export(prepare_taxa)
-export(read_from_sirius_zip)
-export(replace_id)
-export(round_reals)
 export(run_app)
 export(sanitize_spectra)
-export(select_annotations_columns)
-export(select_sirius_columns_canopus)
-export(select_sirius_columns_formulas)
-export(select_sirius_columns_structures)
-export(select_sop_columns)
-export(split_tables_sop)
 export(tima_full)
-export(transform_score_sirius_csi)
 export(weight_annotations)
-export(weight_bio)
-export(weight_chemo)
-import(rlang)
-importFrom(MetaboCoreUtils,calculateMass)
-importFrom(MsBackendMgf,readMgf)
-importFrom(MsBackendMsp,readMsp)
-importFrom(Spectra,Spectra)
-importFrom(Spectra,addProcessing)
-importFrom(Spectra,applyProcessing)
-importFrom(Spectra,combineSpectra)
-importFrom(Spectra,concatenateSpectra)
-importFrom(Spectra,dropNaSpectraVariables)
-importFrom(Spectra,filterEmptySpectra)
-importFrom(Spectra,filterFourierTransformArtefacts)
-importFrom(Spectra,filterIntensity)
-importFrom(Spectra,filterMsLevel)
-importFrom(Spectra,filterPrecursorCharge)
-importFrom(Spectra,filterPrecursorPeaks)
-importFrom(Spectra,reduceSpectra)
-importFrom(Spectra,scalePeaks)
-importFrom(crayon,blue)
-importFrom(crayon,cyan)
-importFrom(crayon,green)
-importFrom(crayon,magenta)
-importFrom(crayon,red)
-importFrom(crayon,silver)
-importFrom(crayon,white)
-importFrom(crayon,yellow)
-importFrom(docopt,docopt)
-importFrom(dplyr,join_by)
-importFrom(fs,dir_create)
-importFrom(fs,file_copy)
-importFrom(fs,path_home)
-importFrom(glue,glue)
-importFrom(httr2,req_error)
-importFrom(httr2,req_method)
-importFrom(httr2,req_perform)
-importFrom(httr2,req_progress)
-importFrom(httr2,request)
-importFrom(httr2,resp_status_desc)
-importFrom(igraph,V)
-importFrom(igraph,components)
-importFrom(igraph,graph_from_data_frame)
-importFrom(jsonlite,fromJSON)
-importFrom(jsonlite,stream_in)
-importFrom(lifecycle,deprecated)
-importFrom(msentropy,calculate_entropy_similarity)
-importFrom(msentropy,calculate_spectral_entropy)
-importFrom(pak,pkg_status)
-importFrom(pbapply,pblapply)
-importFrom(rotl,tax_lineage)
-importFrom(rotl,taxonomy_taxon_info)
-importFrom(rotl,tnrs_match_names)
-importFrom(shiny,runApp)
-importFrom(stats,as.dist)
-importFrom(stats,dist)
-importFrom(stats,setNames)
-importFrom(stringi,stri_detect_fixed)
-importFrom(stringi,stri_detect_regex)
-importFrom(stringi,stri_extract_all_regex)
-importFrom(stringi,stri_length)
-importFrom(stringi,stri_match_all_regex)
-importFrom(stringi,stri_replace_all_fixed)
-importFrom(stringi,stri_replace_all_regex)
-importFrom(stringi,stri_split_regex)
-importFrom(stringi,stri_sub)
-importFrom(targets,matches)
-importFrom(targets,tar_make)
-importFrom(tidyfst,col_rn)
-importFrom(tidyfst,rn_col)
-importFrom(tidyfst,set)
-importFrom(tidyfst,setDT)
-importFrom(tidytable,across)
-importFrom(tidytable,add_count)
-importFrom(tidytable,all_of)
-importFrom(tidytable,anti_join)
-importFrom(tidytable,any_of)
-importFrom(tidytable,arrange)
-importFrom(tidytable,as_tidytable)
-importFrom(tidytable,bind_cols)
-importFrom(tidytable,bind_rows)
-importFrom(tidytable,case_when)
-importFrom(tidytable,coalesce)
-importFrom(tidytable,contains)
-importFrom(tidytable,count)
-importFrom(tidytable,dense_rank)
-importFrom(tidytable,desc)
-importFrom(tidytable,distinct)
-importFrom(tidytable,everything)
-importFrom(tidytable,filter)
-importFrom(tidytable,fread)
-importFrom(tidytable,full_join)
-importFrom(tidytable,fwrite)
-importFrom(tidytable,group_by)
-importFrom(tidytable,inner_join)
-importFrom(tidytable,left_join)
-importFrom(tidytable,matches)
-importFrom(tidytable,mutate)
-importFrom(tidytable,mutate_rowwise)
-importFrom(tidytable,n_distinct)
-importFrom(tidytable,na_if)
-importFrom(tidytable,pivot_longer)
-importFrom(tidytable,pivot_wider)
-importFrom(tidytable,reframe)
-importFrom(tidytable,rename)
-importFrom(tidytable,replace_na)
-importFrom(tidytable,right_join)
-importFrom(tidytable,row_number)
-importFrom(tidytable,rowwise)
-importFrom(tidytable,select)
-importFrom(tidytable,separate_rows)
-importFrom(tidytable,slice_sample)
-importFrom(tidytable,tidytable)
-importFrom(tidytable,ungroup)
-importFrom(tidytable,unnest)
-importFrom(tidytable,where)
-importFrom(utils,URLencode)
-importFrom(utils,combn)
-importFrom(utils,globalVariables)
-importFrom(utils,unzip)
-importFrom(yaml,read_yaml)
-importFrom(yaml,write_yaml)
