--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,6 +47,11 @@ Imports:
     utils,
     visNetwork,
     yaml (>= 2.3.10)
+Remotes:
+    bioc/MetaboCoreUtils,
+    bioc/MsBackendMgf,
+    bioc/MsBackendMsp,
+    bioc/Spectra
 Suggests: 
     BiocManager,
     knitr,
