switch from `base::lapply` to `furrr::future_map`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Imports:
     dplyr (>= 1.1.4),
     DT,
     fs (>= 1.6.4),
+    furrr (>= 0.3.1),
     gt,
     httr (>= 1.4.7),
     httr2 (>= 1.0.5),
@@ -32,7 +33,7 @@ Imports:
     MsBackendMgf (>= 1.10.0),
     MsBackendMsp (>= 1.6.0),
     msentropy (>= 0.1.4),
-    pbapply (>= 1.7.2),
+    progressr (>= 0.15.0),
     rotl (>= 3.1.0),
     shiny (>= 1.9.1),
     shinybusy,
