--- a/tests/testthat/.gitignore
+++ b/tests/testthat/.gitignore
@@ -1,3 +1,12 @@
 # {shinytest2}: Ignore new debug snapshots for `$expect_values()`
 *_.new.png
+_targets.R
+app.R
+CITATION
 data/
+fakeECMDB.json.zip
+fakeHMDB.zip
+params/
+paths.yaml
+scripts/
+WORDLIST
