fix nested future processing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -95,6 +95,7 @@ Collate:
     'import_spectra.R'
     'annotate_spectra.R'
     'benchmark_taxize_spectra.R'
+    'calculate_entropy_score.R'
     'load_yaml_files.R'
     'go_to_cache.R'
     'create_dir.R'
