--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,32 +22,32 @@ Imports:
     crayon (>= 1.5.3),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.4),
-    DT,
-    fs (>= 1.6.4),
+    DT (>= 0.33),
+    fs (>= 1.6.5),
     furrr (>= 0.3.1),
-    gt,
+    gt (>= 0.11.1),
     httr (>= 1.4.7),
-    httr2 (>= 1.0.5),
-    igraph (>= 2.0.3),
+    httr2 (>= 1.0.7),
+    igraph (>= 2.1.2),
     jsonlite (>= 1.8.9),
     MetaboCoreUtils (>= 1.10.0),
     MsBackendMgf (>= 1.10.0),
     MsBackendMsp (>= 1.6.0),
     msentropy (>= 0.1.4),
-    progressr (>= 0.15.0),
+    progressr (>= 0.15.1),
     rotl (>= 3.1.0),
-    shiny (>= 1.9.1),
-    shinybusy,
-    shinyWidgets,
+    shiny (>= 1.10.0),
+    shinybusy (>= 0.3.3),
+    shinyWidgets (>= 0.8.7),
     Spectra (>= 1.12.0),
     stats,
     stringi (>= 1.8.4),
-    targets (>= 1.8.0),
+    targets (>= 1.9.1),
     tidyfst (>= 1.8.1),
     tidyselect (>= 1.2.1),
-    tidytable (>= 0.11.1),
+    tidytable (>= 0.11.2),
     utils,
-    visNetwork,
+    visNetwork (>= 2.1.2),
     yaml (>= 2.3.10)
 Suggests: 
     BiocManager,
