--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,6 @@ Imports:
     dplyr (>= 1.1.4),
     DT (>= 0.33),
     fs (>= 1.6.5),
-    furrr (>= 0.3.1),
     gt (>= 0.11.1),
     httr (>= 1.4.7),
     httr2 (>= 1.0.7),
@@ -34,7 +33,7 @@ Imports:
     MsBackendMgf (>= 1.10.0),
     MsBackendMsp (>= 1.6.0),
     msentropy (>= 0.1.4),
-    progressr (>= 0.15.1),
+    purrr (>= 1.0.2),
     rotl (>= 3.1.0),
     shiny (>= 1.10.0),
     shinybusy (>= 0.3.3),
@@ -45,7 +44,7 @@ Imports:
     targets (>= 1.9.1),
     tidyfst (>= 1.8.1),
     tidyselect (>= 1.2.1),
-    tidytable (>= 0.11.2),
+    tidytable (>= 0.11.1),
     utils,
     visNetwork (>= 2.1.2),
     yaml (>= 2.3.10)
