--- a/inst/params/prepare_params.yaml
+++ b/inst/params/prepare_params.yaml
@@ -33,4 +33,4 @@ options:
   #' Filter high confidence candidates only. BOOLEAN
   high_confidence: yes
   #' Summarize all candidates per feature to a single row. BOOLEAN
-  summarise: no
+  summarize: no
