--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -716,4 +716,4 @@ options:
   remove_ties: no
 
   #' Summarize all candidates per feature to a single row. BOOLEAN
-  summarise: no
+  summarize: no
