--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima/issues
 Depends:
     R (>= 4.3.0)
 Imports:
+    archive (>= 1.1.10),
     BiocParallel (>= 1.36.0),
     crayon (>= 1.5.3),
     docopt (>= 0.7.1),
