Adding libarchive for Linux

--- a/.github/workflows/external-use.yaml
+++ b/.github/workflows/external-use.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Install dependencies (Linux)
         if: matrix.os == 'ubuntu-latest'
         run: |
-          sudo apt-get update && sudo apt-get install -y --no-install-recommends libcurl4-openssl-dev libfribidi-dev libharfbuzz-dev \
+          sudo apt-get update && sudo apt-get install -y --no-install-recommends libarchive-dev libcurl4-openssl-dev libfribidi-dev libharfbuzz-dev \
           && sudo apt-get clean \
           && sudo rm -rf /var/lib/apt/lists/*
       - name: Install (Linux)
