--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -109,6 +109,7 @@ jobs:
         id: build
         uses: docker/build-push-action@v6
         with:
+          file: inst/Dockerfile
           platforms: linux/arm64
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
