--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     MetaboCoreUtils (>= 1.10.0),
     MsBackendMgf (>= 1.10.0),
     MsBackendMsp (>= 1.6.0),
+    MsCoreUtils (>= 1.14.1),
     msentropy (>= 0.1.4),
     purrr (>= 1.0.2),
     rotl (>= 3.1.0),
@@ -101,7 +102,8 @@ Collate:
     'import_spectra.R'
     'annotate_spectra.R'
     'benchmark_taxize_spectra.R'
-    'calculate_entropy_score.R'
+    'calculate_entropy_and_similarity.R'
+    'calculate_similarity.R'
     'load_yaml_files.R'
     'go_to_cache.R'
     'create_dir.R'
