implementing `MsCoreUtils` similarity calculation in Rcpp

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Depends:
 Imports:
     archive (>= 1.1.11),
     BiocParallel (>= 1.36.0),
+    clue,
     crayon (>= 1.5.3),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.4),
@@ -39,7 +40,6 @@ Imports:
     MetaboCoreUtils (>= 1.10.0),
     MsBackendMgf (>= 1.10.0),
     MsBackendMsp (>= 1.6.0),
-    MsCoreUtils (>= 1.14.1),
     msentropy (>= 0.1.4),
     purrr (>= 1.0.2),
     rotl (>= 3.1.0),
@@ -56,6 +56,9 @@ Imports:
     utils,
     visNetwork (>= 2.1.2),
     yaml (>= 2.3.10)
+LinkingTo:
+    Rcpp,
+    RcppArmadillo
 Suggests: 
     BiocManager,
     knitr,
@@ -86,6 +89,7 @@ X-schema.org-keywords: metabolite annotation, chemotaxonomy, scoring
     system, natural products, computational metabolomics, taxonomic
     distance, specialized metabolome
 Collate:
+    'RcppExports.R'
     'round_reals.R'
     'log_pipe.R'
     'harmonize_adducts.R'
