--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,3 +38,5 @@ export(run_app)
 export(sanitize_spectra)
 export(tima_full)
 export(weight_annotations)
+importFrom(Rcpp,sourceCpp)
+useDynLib(tima, .registration = TRUE)
