--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -124,6 +124,9 @@ files:
         #' Spectral prepared structure organism pairs library. STRING
         spectral: data/interim/libraries/sop/spectral_prepared.tsv.gz
 
+        #' Wikidata spectral prepared structure organism pairs library. STRING
+        wikidata: data/interim/libraries/sop/wikidata_spectral_prepared.tsv.gz
+
       #' Merged structure organism pairs library.
       merged:
         #' Merged structure organism pairs library keys. STRING
@@ -163,12 +166,12 @@ files:
       #' List of negative spectral libraries. STRING
       neg:
         - data/interim/libraries/spectra/exp/massbank_neg.rds
-        - data/interim/libraries/spectra/is/lotus_neg.rds
+        - data/interim/libraries/spectra/is/wikidata_neg.rds
 
       #' List of positive spectral libraries. STRING
       pos:
         - data/interim/libraries/spectra/exp/massbank_pos.rds
-        - data/interim/libraries/spectra/is/lotus_pos.rds
+        - data/interim/libraries/spectra/is/wikidata_pos.rds
 
       #' List of raw spectral libraries. STRING
       raw:
