--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(prepare_libraries_sop_lotus)
 export(prepare_libraries_sop_merged)
 export(prepare_libraries_spectra)
 export(prepare_taxa)
+export(read_mgf_opti)
 export(run_app)
 export(sanitize_spectra)
 export(tima_full)
