--- a/inst/params/default/prepare_libraries_rt.yaml
+++ b/inst/params/default/prepare_libraries_rt.yaml
@@ -50,7 +50,7 @@ names:
   #' Name of fields present in the MGF.
   mgf:
     #' Name of "InChIKey" in MGF. STRING
-    inchikey: ~
+    inchikey: null
 
     #' Name of "retention time" in MGF. STRING
     retention_time: RTINSECONDS
