--- a/inst/params/default/prepare_libraries_spectra.yaml
+++ b/inst/params/default/prepare_libraries_spectra.yaml
@@ -18,10 +18,10 @@ names:
   #' Name of fields present in the MGF.
   mgf:
     #' Name of "adduct" in MGF. STRING
-    adduct: ~
+    adduct: null
 
     #' Name of "collision energy" in MGF. STRING
-    collision_energy: ~
+    collision_energy: null
 
     #' Name of "compound ID" in MGF. STRING
     compound_id: FILENAME
@@ -33,16 +33,16 @@ names:
     inchi: INCHI
 
     #' Name of "InChI without stereo" in MGF. STRING
-    inchi_no_stereo: ~
+    inchi_no_stereo: null
 
     #' Name of "InChIKey" in MGF. STRING
-    inchikey: ~
+    inchikey: null
 
     #' Name of "InChIKey without stereo" in MGF. STRING
-    inchikey_no_stereo: ~
+    inchikey_no_stereo: null
 
     #' Name of "molecular formula" in MGF. STRING
-    molecular_formula: ~
+    molecular_formula: null
 
     #' Name of "name" in MGF. STRING
     name: NAME
@@ -54,16 +54,16 @@ names:
     smiles: SMILES
 
     #' Name of "SMILES without stereo" in MGF. STRING
-    smiles_no_stereo: ~
+    smiles_no_stereo: null
 
     #' Name of "spectrum ID" in MGF. STRING
     spectrum_id: SPECTRUMID
 
     #' Name of "SPLASH" in MGF. STRING
-    splash: ~
+    splash: null
 
     #' Name of "synonyms" in MGF. STRING
-    synonyms: ~
+    synonyms: null
 
     #' Name of "xlogP" in MGF. STRING
-    xlogp: ~
+    xlogp: null
