--- a/inst/params/default/prepare_libraries_sop_closed.yaml
+++ b/inst/params/default/prepare_libraries_sop_closed.yaml
@@ -8,7 +8,7 @@ files:
       #' Raw structure organism pairs libraries.
       raw:
         #' Closed structure organism pairs library. STRING
-        closed: ../lotus-processor/data/processed/230106_closed_metadata.csv.gz
+        closed: ~/Git/lotus-processor/data/processed/240412_closed_metadata.csv.gz
 
       #' List of prepared structure organism pairs libraries.
       prepared:
